unpackaged/main/default/objects/CMPL123__Product__c/fields/classifier__c.field-meta.xml
<CustomField>
        <fullName>classifier__c</fullName>
        <description>Classifier for einstein predictions</description>
        <label>classifier</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>