unpackaged/main/default/objects/CMPL123__Product__c/fields/CMPL123__Disposition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Disposition__c</fullName>
        <label>Disposition</label>
        <type>TextArea</type>
    </CustomField>