unpackaged/main/default/objects/CMPL123__Product__c/fields/CMPL123__Product_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Product_Code__c</fullName>
        <description>Number that uniquely identifies a product.</description>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>