unpackaged/main/default/objects/CMPL123__Product__c/fields/CMPL123__Product_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Product_Description__c</fullName>
        <description>A description of the product.</description>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>