unpackaged/main/default/objects/CMPL123__Product__c/fields/CMPL123__Product_Family__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Product_Family__c</fullName>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>