unpackaged/main/default/objects/CMPL123__Product__c/fields/CMPL123__Product_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Product_No__c</fullName>
        <label>Product No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>