unpackaged/main/default/objects/CMPL123__Product__c/fields/CMPL123__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Type__c</fullName>
        <description>Type of product, e.g. Drug or Device.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Device</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>