unpackaged/main/default/objects/CMPL123__Product__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>